--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -45,6 +45,10 @@
     font-size: 1.5rem;
     font-weight: 700;
     margin-bottom: 20px;
+
+    @include for-phone-only() {
+      font-size: 1.2rem;
+    }
   }
 
   .text {
@@ -172,9 +176,19 @@
   grid-row-end: span 2;
   line-height: 60px;
   padding: 90px 20px;
+
+  @include for-phone-only() {
+    font-size: 3rem;
+  }
+
   .title {
     display: flex;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    @include for-phone-only() {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
   }
   .char {
     transform: translateY(115px);
@@ -185,6 +199,11 @@
     opacity: 0;
     color: #86868b;
     font-size: 2.5rem;
+    @include for-phone-only() {
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+    }
   }
 }
 
@@ -309,6 +328,7 @@
   );
   @include for-phone-only() {
     flex-direction: column;
+    gap: 20px;
   }
 
   .language {
